Fixed bugs in convergence analysis

--- a/Convergence_Analysis.ipynb
+++ b/Convergence_Analysis.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -52,19 +52,19 @@
      "output_type": "stream",
      "text": [
       "reading all atom data\n",
-      "   ResID  SeqID  Frame  Time  Occupancy  Rep SimType\n",
-      "0   3877   2169      0   0.0          0    0      AA\n",
-      "1   3877   2169      1   0.6          0    0      AA\n",
-      "2   3877   2169      2   1.2          0    0      AA\n",
-      "3   3877   2169      3   1.8          0    0      AA\n",
-      "4   3877   2169      4   2.4          0    0      AA\n",
+      "   ResID  SeqID  Frame  Time  Occupancy SimType  Rep\n",
+      "0   4236   2528      0   0.0          0      AA    0\n",
+      "1   4236   2528      1   0.6          0      AA    0\n",
+      "2   4236   2528      2   1.2          0      AA    0\n",
+      "3   4236   2528      3   1.8          0      AA    0\n",
+      "4   4236   2528      4   2.4          0      AA    0\n",
       "Reading coarse grain data chunks\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4f70aa960f0049dc9878244894179dae",
+       "model_id": "82b2b870432c4aa0a9f75caf33f10144",
        "version_major": 2,
        "version_minor": 0
       },
@@ -91,6 +91,19 @@
      ]
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wbotellosmith/anaconda2/lib/python2.7/site-packages/ipykernel_launcher.py:41: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
+      "of pandas will change to not sort by default.\n",
+      "\n",
+      "To accept the future behavior, pass 'sort=False'.\n",
+      "\n",
+      "To retain the current behavior and silence the warning, pass 'sort=True'.\n",
+      "\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -111,80 +124,80 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ResID</th>\n",
-       "      <th>SeqID</th>\n",
        "      <th>Frame</th>\n",
-       "      <th>Time</th>\n",
        "      <th>Occupancy</th>\n",
        "      <th>Rep</th>\n",
+       "      <th>ResID</th>\n",
+       "      <th>SeqID</th>\n",
        "      <th>SimType</th>\n",
+       "      <th>Time</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>3877</td>\n",
-       "      <td>2169</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4236</td>\n",
+       "      <td>2528</td>\n",
        "      <td>AA</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>3877</td>\n",
-       "      <td>2169</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.6</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>4236</td>\n",
+       "      <td>2528</td>\n",
        "      <td>AA</td>\n",
+       "      <td>0.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3877</td>\n",
-       "      <td>2169</td>\n",
        "      <td>2</td>\n",
-       "      <td>1.2</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>4236</td>\n",
+       "      <td>2528</td>\n",
        "      <td>AA</td>\n",
+       "      <td>1.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3877</td>\n",
-       "      <td>2169</td>\n",
        "      <td>3</td>\n",
-       "      <td>1.8</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>4236</td>\n",
+       "      <td>2528</td>\n",
        "      <td>AA</td>\n",
+       "      <td>1.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>3877</td>\n",
-       "      <td>2169</td>\n",
        "      <td>4</td>\n",
-       "      <td>2.4</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>4236</td>\n",
+       "      <td>2528</td>\n",
        "      <td>AA</td>\n",
+       "      <td>2.4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   ResID  SeqID  Frame  Time  Occupancy  Rep SimType\n",
-       "0   3877   2169      0   0.0          0    0      AA\n",
-       "1   3877   2169      1   0.6          0    0      AA\n",
-       "2   3877   2169      2   1.2          0    0      AA\n",
-       "3   3877   2169      3   1.8          0    0      AA\n",
-       "4   3877   2169      4   2.4          0    0      AA"
+       "   Frame  Occupancy  Rep  ResID  SeqID SimType  Time\n",
+       "0      0          0    0   4236   2528      AA   0.0\n",
+       "1      1          0    0   4236   2528      AA   0.6\n",
+       "2      2          0    0   4236   2528      AA   1.2\n",
+       "3      3          0    0   4236   2528      AA   1.8\n",
+       "4      4          0    0   4236   2528      AA   2.4"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,13 +205,14 @@
    "source": [
     "baseDir='.'\n",
     "\n",
-    "aaOccupancyFile=\"All_Atom_Occupancy_2uS_Data.csv\"\n",
+    "aaOccupancyFile=\"All_Atom_Occupancy_Data.2us.csv\"\n",
     "aaFrameRate=.6\n",
     "\n",
     "print 'reading all atom data'\n",
     "aa_occupancy_data=pd.read_csv('/'.join([baseDir,aaOccupancyFile]))\n",
     "aa_occupancy_data.Time=aa_occupancy_data.Frame*aaFrameRate\n",
     "aa_occupancy_data['SimType']='AA'\n",
+    "aa_occupancy_data['Rep']=0\n",
     "\n",
     "print aa_occupancy_data.head()\n",
     "\n",
@@ -237,9 +251,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wbotellosmith/anaconda2/lib/python2.7/site-packages/ipykernel_launcher.py:7: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  import sys\n",
+      "/Users/wbotellosmith/anaconda2/lib/python2.7/site-packages/ipykernel_launcher.py:8: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  \n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -261,99 +293,117 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ResID</th>\n",
-       "      <th>SeqID</th>\n",
        "      <th>Frame</th>\n",
-       "      <th>Time</th>\n",
        "      <th>Occupancy</th>\n",
        "      <th>Rep</th>\n",
+       "      <th>ResID</th>\n",
+       "      <th>SeqID</th>\n",
        "      <th>SimType</th>\n",
+       "      <th>Time</th>\n",
        "      <th>CumulativeOccupancy</th>\n",
        "      <th>CumulativeMean</th>\n",
+       "      <th>ShiftedOcc</th>\n",
+       "      <th>deltaOcc</th>\n",
+       "      <th>Nruns</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>3877</td>\n",
-       "      <td>2169</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3877</td>\n",
-       "      <td>2169</td>\n",
+       "      <th>4918</th>\n",
+       "      <td>1584</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.6</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>3365</td>\n",
+       "      <td>1310</td>\n",
        "      <td>AA</td>\n",
-       "      <td>0</td>\n",
+       "      <td>950.4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.00</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3877</td>\n",
-       "      <td>2169</td>\n",
+       "      <th>5085</th>\n",
+       "      <td>1751</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3365</td>\n",
+       "      <td>1310</td>\n",
+       "      <td>AA</td>\n",
+       "      <td>1050.6</td>\n",
        "      <td>2</td>\n",
-       "      <td>1.2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1.00</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3877</td>\n",
-       "      <td>2169</td>\n",
+       "      <th>5322</th>\n",
+       "      <td>1988</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3365</td>\n",
+       "      <td>1310</td>\n",
+       "      <td>AA</td>\n",
+       "      <td>1192.8</td>\n",
        "      <td>3</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1.00</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>3877</td>\n",
-       "      <td>2169</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2.4</td>\n",
+       "      <th>5326</th>\n",
+       "      <td>1992</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>3365</td>\n",
+       "      <td>1310</td>\n",
        "      <td>AA</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1195.2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.00</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5327</th>\n",
+       "      <td>1993</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3365</td>\n",
+       "      <td>1310</td>\n",
+       "      <td>AA</td>\n",
+       "      <td>1195.8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   ResID  SeqID  Frame  Time  Occupancy  Rep SimType  CumulativeOccupancy  \\\n",
-       "0   3877   2169      0   0.0          0    0      AA                    0   \n",
-       "1   3877   2169      1   0.6          0    0      AA                    0   \n",
-       "2   3877   2169      2   1.2          0    0      AA                    0   \n",
-       "3   3877   2169      3   1.8          0    0      AA                    0   \n",
-       "4   3877   2169      4   2.4          0    0      AA                    0   \n",
+       "      Frame  Occupancy  Rep  ResID  SeqID SimType    Time  \\\n",
+       "4918   1584          1    0   3365   1310      AA   950.4   \n",
+       "5085   1751          1    0   3365   1310      AA  1050.6   \n",
+       "5322   1988          1    0   3365   1310      AA  1192.8   \n",
+       "5326   1992          1    0   3365   1310      AA  1195.2   \n",
+       "5327   1993          1    0   3365   1310      AA  1195.8   \n",
        "\n",
-       "   CumulativeMean  \n",
-       "0             NaN  \n",
-       "1             0.0  \n",
-       "2             0.0  \n",
-       "3             0.0  \n",
-       "4             0.0  "
+       "      CumulativeOccupancy  CumulativeMean  ShiftedOcc  deltaOcc  Nruns  \n",
+       "4918                    1            1.00         0.0       1.0    1.0  \n",
+       "5085                    2            1.00         0.0       1.0    2.0  \n",
+       "5322                    3            1.00         0.0       1.0    3.0  \n",
+       "5326                    4            1.00         0.0       1.0    4.0  \n",
+       "5327                    5            1.25         1.0       0.0    4.0  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,24 +413,27 @@
     "with pd.option_context('mode.use_inf_as_null',True):\n",
     "    analysisData=joint_occupancy_data\n",
     "    analysisData['CumulativeOccupancy']=analysisData.groupby(groupingCols).Occupancy.cumsum()\n",
-    "    analysisData['CumulativeMean']=aaFrameRate*analysisData.CumulativeOccupancy/analysisData.Frame\n",
+    "    analysisData['deltaOcc']=analysisData.Occupancy-analysisData.ShiftedOcc\n",
+    "    analysisData=analysisData.dropna()\n",
+    "    analysisData['Nruns']=analysisData.groupby(groupingCols).deltaOcc.cumsum()\n",
+    "    analysisData['CumulativeMean']=analysisData.CumulativeOccupancy/analysisData.Nruns\n",
     "analysisData.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "757e3a95159d40c6b230936d17330484",
+       "model_id": "b4f7365b18b243dd8ba20f58b99522dc",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "aW50ZXJhY3RpdmUoY2hpbGRyZW49KERyb3Bkb3duKGRlc2NyaXB0aW9uPXUncmVzaWQnLCBvcHRpb25zPSgzODc3LCAzNzMsIDE1NDAsIDMzOTAsIDIyMTIsIDM2NDksIDc2MCwgNDA1OSwgMTXigKY=\n"
+       "aW50ZXJhY3RpdmUoY2hpbGRyZW49KERyb3Bkb3duKGRlc2NyaXB0aW9uPXUncmVzaWQnLCBvcHRpb25zPSgzMzY1LCAyMjUwLCAzMDQzLCAxOTg4LCAzNjc5LCAzMDM0LCAxNjIsIDI0NCwgMjTigKY=\n"
       ]
      },
      "metadata": {},
