--- a/Convergence_Analysis.ipynb
+++ b/Convergence_Analysis.ipynb
@@ -251,25 +251,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/wbotellosmith/anaconda2/lib/python2.7/site-packages/ipykernel_launcher.py:7: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  import sys\n",
       "/Users/wbotellosmith/anaconda2/lib/python2.7/site-packages/ipykernel_launcher.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  \n"
+      "  \n",
+      "/Users/wbotellosmith/anaconda2/lib/python2.7/site-packages/ipykernel_launcher.py:9: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  if __name__ == '__main__':\n",
+      "/Users/wbotellosmith/anaconda2/lib/python2.7/site-packages/ipykernel_launcher.py:10: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  # Remove the CWD from sys.path while we load stuff.\n"
      ]
     },
     {
@@ -318,9 +324,9 @@
        "      <td>AA</td>\n",
        "      <td>950.4</td>\n",
        "      <td>1</td>\n",
-       "      <td>1.00</td>\n",
+       "      <td>0.6</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -333,10 +339,10 @@
        "      <td>AA</td>\n",
        "      <td>1050.6</td>\n",
        "      <td>2</td>\n",
-       "      <td>1.00</td>\n",
+       "      <td>1.2</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5322</th>\n",
@@ -348,10 +354,10 @@
        "      <td>AA</td>\n",
        "      <td>1192.8</td>\n",
        "      <td>3</td>\n",
-       "      <td>1.00</td>\n",
+       "      <td>1.8</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5326</th>\n",
@@ -363,10 +369,10 @@
        "      <td>AA</td>\n",
        "      <td>1195.2</td>\n",
        "      <td>4</td>\n",
-       "      <td>1.00</td>\n",
+       "      <td>2.4</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5327</th>\n",
@@ -378,10 +384,10 @@
        "      <td>AA</td>\n",
        "      <td>1195.8</td>\n",
        "      <td>5</td>\n",
-       "      <td>1.25</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -396,14 +402,14 @@
        "5327   1993          1    0   3365   1310      AA  1195.8   \n",
        "\n",
        "      CumulativeOccupancy  CumulativeMean  ShiftedOcc  deltaOcc  Nruns  \n",
-       "4918                    1            1.00         0.0       1.0    1.0  \n",
-       "5085                    2            1.00         0.0       1.0    2.0  \n",
-       "5322                    3            1.00         0.0       1.0    3.0  \n",
-       "5326                    4            1.00         0.0       1.0    4.0  \n",
-       "5327                    5            1.25         1.0       0.0    4.0  "
+       "4918                    1             0.6         0.0     False    1.0  \n",
+       "5085                    2             1.2         0.0     False    1.0  \n",
+       "5322                    3             1.8         0.0     False    1.0  \n",
+       "5326                    4             2.4         0.0     False    1.0  \n",
+       "5327                    5             3.0         1.0     False    1.0  "
       ]
      },
-     "execution_count": 88,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,21 +420,23 @@
     "    analysisData=joint_occupancy_data\n",
     "    analysisData['CumulativeOccupancy']=analysisData.groupby(groupingCols).Occupancy.cumsum()\n",
     "    analysisData['deltaOcc']=analysisData.Occupancy-analysisData.ShiftedOcc\n",
+    "    analysisData['deltaOcc']=analysisData['deltaOcc']<0\n",
     "    analysisData=analysisData.dropna()\n",
     "    analysisData['Nruns']=analysisData.groupby(groupingCols).deltaOcc.cumsum()\n",
-    "    analysisData['CumulativeMean']=analysisData.CumulativeOccupancy/analysisData.Nruns\n",
+    "    analysisData['Nruns']=analysisData['Nruns'].map(lambda x: np.max([x,1.0]))\n",
+    "    analysisData['CumulativeMean']=aaFrameRate*analysisData.CumulativeOccupancy/analysisData.Nruns\n",
     "analysisData.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b4f7365b18b243dd8ba20f58b99522dc",
+       "model_id": "cb1af0557e904718aca26729e752720d",
        "version_major": 2,
        "version_minor": 0
       },
